# Aniso_Shell_TopOpt

./: CMakeLists.txt  MMAseq.cpp  MMAseq.h  README.md  benchmark.cpp  elementIntegrator.cpp  elementIntegrator.h  exodusWriter.cpp  exodusWriter.h  finiteElementAnalysis.cpp  finiteElementAnalysis.h  main.cpp  manifold.cpp  manifold.h  manifoldTree.h  mesh.cpp  mesh.h  options.cpp  options.h  pdeFilter.cpp  pdeFilter.h  qualityConstraint.cpp  qualityConstraint.h  shellElement.h  spack.yaml  testElementIntegrator.cpp  testFiniteDifference.cpp  testFiniteElementAnalysis.cpp  testOptimization.cpp  thicknessFilter.cpp  thicknessFilter.h  utilities.h  volumeConstraint.cpp  volumeConstraint.h
jobs/: blk.yaml  cantilever.yaml  cantilever_rot.yaml  circular_plate.yaml  curved_shell.yaml  cylinder.yaml  fake_dehomog.yaml  plate2.yaml  pressure_plate.yaml  run_sphere_array.py  sphere.yaml  square_base.yaml  test.yaml  testtingeling.yaml
jobs/paper/: cantilever.yaml  circular_plate.yaml  circular_plate_fixed_equator.yaml  cowling_shape.yaml  cowling_shape_and_thk.yaml  curved_shell.yaml  curved_shell_025_r.yaml  curved_shell_0_r.yaml  curved_shell_1_qc.yaml  curved_shell_2_r.yaml  curved_shell_3_qc.yaml  curved_shell_noqc.yaml  cylinder_mitchell.yaml  cylinder_mitchell_slack_all.yaml  cylinder_mitchell_slack_q.yaml  half_cylinder.yaml  half_cylinder_struct.yaml  half_cylinder_sym.yaml  sphere.yaml  sphere_fixed_equator.yaml
testMeshes/: convert.sh  curved_shell_ribs0.ply  curved_shell_ribs1.ply  curved_shell_ribs2.ply  exo2ply.py  fd_mesh0.ply  fd_multiple_manifolds0.ply  fd_multiple_manifolds1.ply  fd_multiple_manifolds2.ply  fd_multiple_manifolds3.ply  hemisphere0.ply  plate_005_0.ply  plate_01_0.ply  plate_02_0.ply  plate_04_0.ply  plate_1.ply  plate_sim0.ply  plate_sim1.ply  test_mesh0.ply  unordered_plate0.ply
